# trajectory-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: collision_path.csv  plan_example.py
examples/maps/: warehouse.txt
src/trajectory_lab/: __init__.py  _numeric.py  cli.py  collision.py  errors.py  grid.py  hybrid.py  postprocess.py  search.py  timing.py  validation.py
tests/: _path.py  test_cli.py  test_hybrid.py  test_postprocess_collision.py  test_search.py  test_timing_validation.py
tests/fixtures/: blocked.txt  corner.txt  detour.txt  simple_open.txt  smoothing_collision.txt
